Comitando correções nas rotas

--- a/adicionar.html
+++ b/adicionar.html
@@ -1,5 +1,11 @@
+  <p>{{result}}</p>
   <label for="nome">Nome:</label>
   <input type="text" name="nome" ng-model="pessoa.nome"></br>
   <label for="cidade">Cidade:</label>
   <input type="text" name="cidade" ng-model="pessoa.cidade">
+  </br>
+  </br>
   <input type="button" name="salvar" value="Salvar" ng-click="add()">
+  </br>
+  </br>
+  <a href="#!/">Adicionar nova pessoa</a>
