--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js" charset="utf-8"> </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"> </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-route.min.js"> </script>
   <script src="pessoas.js" charset="utf-8"> </script>
 </html>
